last modified: button change theme

--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
   <section id="menu" class="content-section">
     <br>
     <br>
+    <div>
+      <div class="row">
+        <div class="offset-lg-8"></div>
+        <div class="col-lg-4">
+          <div class="center">
+            <button class="btn btn-light" onclick="changeTheme()">
+              <i class="fa fa-paint-brush"></i> Change Theme</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <br>
     <br>
     <br>
@@ -103,9 +114,6 @@
           <br>
           <br>
           <br>
-          <div class="center">
-            <button class="btn btn-light" onclick="changeTheme()">Change Theme</button>
-          </div>
         </div>
         <div class="col-lg-4 col-md-12 col-sm-12">
           <div class="card text-center card-rad">
@@ -584,7 +592,7 @@
   </section>
   <section id="blog" class="content-section">
     <br>
-    <h2 class="center">Blog</h2>
+    <h2 class="center text-white">Blog</h2>
     <br>
     <div class="container">
       <div class="row">
